<resources>
    <string name="app_name">BTL2</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="Log_Out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>