<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login"
    android:background="@drawable/background">>

    <TextView
        android:text="@string/Register"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editText_Name"
        android:layout_width="330sp"
        android:layout_height="60sp"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:background="@drawable/custom_shape"
        android:ems="10"
        android:inputType="text"
        android:paddingLeft="10sp"
        android:hint="@string/name"
        android:textColor="#020101"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editText_Phone"
        android:layout_width="330sp"
        android:layout_height="60sp"
        android:layout_gravity="center"
        android:layout_marginTop="13sp"
        android:background="@drawable/custom_shape"
        android:ems="10"
        android:inputType="text"
        android:paddingLeft="10sp"
        android:hint="@string/phone"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="330sp"
        android:layout_height="60sp"
        android:layout_gravity="center"
        android:layout_marginTop="13sp"
        android:background="@drawable/custom_shape"
        android:ems="10"
        android:inputType="text"
        android:paddingLeft="10sp"
        android:hint="@string/password"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editText_Email"
        android:layout_width="330sp"
        android:layout_height="60sp"
        android:layout_gravity="center"
        android:layout_marginTop="13sp"
        android:background="@drawable/custom_shape"
        android:ems="10"
        android:inputType="text"
        android:paddingLeft="10sp"
        android:hint="@string/email"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_Verify"
            android:layout_width="261sp"
            android:layout_height="60sp"
            android:layout_marginLeft="41sp"
            android:layout_marginTop="13sp"
            android:background="@drawable/custom_shape"
            android:ems="10"
            android:inputType="text"
            android:paddingLeft="10sp"
            android:text="Verification"
            android:textColor="#CDCDCD"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_Count"
            android:layout_width="65sp"
            android:layout_height="60sp"
            android:layout_marginStart="2sp"
            android:layout_marginTop="13sp"
            android:background="@drawable/custom_shape"
            android:ems="10"
            android:inputType="text"
            android:text="60s"
            android:textAlignment="center"
            android:textColor="#CDCDCD"
            android:textSize="23sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_Register"
        android:layout_width="120sp"
        android:layout_height="53sp"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:background="@drawable/custom_shape"
        android:text="@string/register"
        android:textSize="18sp"
        app:backgroundTint="#ED4D2D" />

    <TextView
        android:id="@+id/text_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8sp"
        android:text="Login"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />
</LinearLayout>